<resources>
    <string name="app_name">MathGuru</string>
    <string name="Edit_Email">Введите почту</string>
    <string name="Edit_Password">Введите пароль</string>
    <string name="app_in_name">Math Guru</string>
    <string name="app_name_author">Math App by SkaZo4nikk</string>
    <string name="text_bottom">Войдите в свою учетную запись</string>
    <string name="buttonSignIn">Войти</string>
    <string name="buttonRegister">Зарегистрироваться</string>
    <string name="Edit_Name">Введите имя</string>
</resources>